--- a/index.html
+++ b/index.html
@@ -1,60 +1,51 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>JavaScript</title>
-    </head>
-    <body>
-        <p id="resposta">Resposta: 0</p>
-        <div>
-            <button onClick="digitos(0)">0</button>
-            <button onClick="digitos(1)">1</button>
-            <button onClick="digitos(2)">2</button>
-            <button onClick="digitos(3)">3</button>
-            <button onClick="digitos(4)">4</button>
-            <button onClick="digitos(5)">5</button>
-            <button onClick="digitos(6)">6</button>
-            <button onClick="digitos(7)">7</button>
-            <button onClick="digitos(8)">8</button>
-            <button onClick="digitos(9)">9</button>
-        </div>
-        <div>
-            <button onClick="FuncaoOperacao('+')">+</button>
-            <button onClick="FuncaoOperacao('-')">-</button>
-            <button onclick="resultado('operacao')">Resposta</button>
-        </div>
-        <script>
-            let valor1 = "";
-            let valor2 = "";
-            let operacao = null;
-            let resposta = 0;
-            function digitos(digito){
-                if(!operacao){
-                    valor1 = valor1 + digito;
-                    atualizaTela(valor1);
-                }
-                else {
-                    valor2 = valor2 + digito;
-                    atualizaTela(valor2);
-                }
-            }
-            function FuncaoOperacao(op){
-                operacao = op;            
-                atualizaTela(valor2);
-            }
-            function resultado(){
-                if( operacao == '+' ){
-                    resposta = parseFloat(valor1) + parseFloat(valor2)
-                    atualizaTela(resposta);  
-                } else if ( operacao == '-' ){
-                    resposta = parseFloat(valor1) - parseFloat(valor2)
-                    atualizaTela(resposta);  
-                }
-            }
-        function atualizaTela(ValorEmTela){
-            document.getElementById("resposta").innerText = "resposta: " + ValorEmTela;
-        }
-    </script>
+<head>
+<meta charset="utf-8">
+<title>Meu Projeto com p5.js</title>
+<script src="https://cdn.jsdelivr.net/npm/p5@1.11.5/lib/p5.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.3/addons/p5.sound.min.js"></script>
+<script src="controle.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Projeto P5.js</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Projeto</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Instruções</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#sobre">Autores</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <section id="projeto" class="text-center display-4">
+            <h1>Noite Chuvosa:</h1>
+            <div id="canvas-container">
+                <button id="play-button">Play</button>
+                <script src="sketch.js"></script>
+            </div>
+        </section>
+    </main>
+
+<footer id="sobre">
+    <p>Feito por Você — 2025</p>
+</footer>
 </body>
 </html>
