--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </main>
 
 <footer id="sobre">
-    <p>Feito por Marcelo Paulino, Davi Lucas — 2025</p>
+    <p>Feito por: Marcelo Paulino e Davi Lucas — 2025 (Para SenacSP - BCC > Projeto Integrador)</p>
 </footer>
 </body>
 </html>
