--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
 <meta charset="utf-8">
 <title>Meu Projeto com p5.js</title>
+
+<!-- p5.js e p5.sound -->
 <script src="https://cdn.jsdelivr.net/npm/p5@1.11.5/lib/p5.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.11.3/addons/p5.sound.min.js"></script>
-<script src="controle.js"></script>
+
+<!-- Bootstrap CSS e JS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+
+<!-- Seu estilo e controle -->
 <link rel="stylesheet" type="text/css" href="style.css">
+<script src="controle.js"></script>
+
+<!-- Canvas de fundo chuva -->
+<script src="background.js"></script>
 </head>
 <body>
     <header>
@@ -45,47 +54,134 @@
         <section>
             <div>
                 <h2>Análise Completa</h2>
-                <h3>Primeiro passo: Desenhar a Lua</h3>
+                <h3>Primeiro passo: desenhar a Lua</h3>
                 <p>
                     Como desenhamos a lua? Você deve estar se perguntando... A lua foi criada dentro de uma função chamada <code>desenharLua()</code>, justamente para facilitar seu uso sempre que for necessário chamá-la no programa.
                 </p>
                 <p>
-                    A lógica da lua é bem simples: primeiro desenhamos um círculo claro (em tom bege), representando a lua cheia. Em seguida, desenhamos um segundo círculo um pouco menor e com a cor do fundo (um azul escuro), ligeiramente deslocado para a direita. 
+                    A lógica da lua é bem simples: primeiro desenhamos um círculo claro (em tom bege), representando a lua cheia. Em seguida, desenhamos um segundo círculo um pouco menor e com a cor do fundo (um azul escuro), ligeiramente deslocado para a direita.
                 </p>
                 <p>
                     Esse segundo círculo fica sobreposto ao primeiro, criando um efeito visual que simula a fase minguante da lua — como se uma parte dela estivesse escondida pela sombra.
                 </p>
-                <h4>Código Utilizado:</h4>
+                <h4>Código utilizado:</h4>
             </div>
             <div>
-                <img src="images/imgLua.jpg" alt="codigo da Chuva">
+                <img src="images/imgLua.jpg" alt="Código da lua">
             </div>
         </section>
+
         <section>
             <div>
-                <h3>Segundo passo: Criar as Estrelas</h3>
+                <h3>Segundo passo: criar as estrelas</h3>
                 <p>As estrelas foram criadas para dar um toque mais realista ao cenário noturno. Mas como isso foi feito?</p>
-                <p>Primeiro, criamos um array chamado <code>estrelas</code> e decidimos que o total de estrelas seria 200.</p>
+                <p>Primeiro, criamos um array chamado <code>estrelas</code> e definimos que o total de estrelas seria 200.</p>
                 <p>Dentro da função <code>setup()</code>, usamos um laço <code>for</code> para gerar essas 200 estrelas, onde cada uma recebe:</p>
                 <ul>
-                <li><strong>estrelaX</strong>: posição horizontal aleatória na tela</li>
-                <li><strong>estrelaY</strong>: posição vertical aleatória</li>
-                <li><strong>brilhoEstrela</strong>: valor de brilho aleatório entre 100 e 255</li>
-                <li><strong>tamanhoEstrela</strong>: tamanho aleatório entre 1 e 2 pixels</li>
+                    <li><strong>estrelaX</strong>: posição horizontal aleatória na tela;</li>
+                    <li><strong>estrelaY</strong>: posição vertical aleatória;</li>
+                    <li><strong>brilhoEstrela</strong>: valor de brilho aleatório entre 100 e 255;</li>
+                    <li><strong>tamanhoEstrela</strong>: tamanho aleatório entre 1 e 2 pixels.</li>
                 </ul>
                 <p>Depois disso, criamos uma função chamada <code>desenharEstrela()</code>, que desenha cada estrela na tela com <code>fill</code> no valor do brilho dela e um <code>circle()</code> com o tamanho definido.</p>
                 <p>Por fim, chamamos essa função dentro do <code>draw()</code>, junto com a lua e a chuva, para que as estrelas apareçam sempre que o cenário for desenhado.</p>
-                <h4>Código Utilizado:</h4>
+                <h4>Código utilizado:</h4>
             </div>
             <div>
-                <img src="images/letEstrelas.jpg" alt="codigo da estrela (let)">
-                <img src="images/functionDesenharEstrela.jpg" alt="funcao de desenhar estrela">
-                <img src="images/criarEstrelas.jpg" alt="">
+                <h5>1. Declaração de variáveis no início do código</h5>
+                <img src="images/letEstrelas.jpg" alt="Declaração das variáveis das estrelas">
+                <h5>2. Geração das estrelas dentro da função setup()</h5>
+                <img src="images/criarEstrelas.jpg" alt="Geração das estrelas">
+                <h5>3. Função para desenhar as estrelas na tela</h5>
+                <img src="images/functionDesenharEstrela.jpg" alt="Função desenharEstrela">
+            </div>
+        </section>
+
+        <section>
+            <div>
+                <h3>Terceiro passo: criar a chuva</h3>
+                <p>A chuva foi adicionada para trazer uma sensação de ambiente dinâmico e reforçar o clima do cenário. Mas como ela foi criada?</p>
+                <p>Assim como as estrelas, começamos criando um array chamado <code>gotas</code> e definimos o total de gotas como 300.</p>
+                <p>Na função <code>setup()</code>, usamos um laço <code>for</code> para gerar essas 300 gotas. Cada gota possui as seguintes propriedades:</p>
+                <ul>
+                    <li><strong>gotasX</strong>: posição horizontal aleatória;</li>
+                    <li><strong>gotasY</strong>: posição vertical aleatória;</li>
+                    <li><strong>veloGotas</strong>: velocidade aleatória (quanto maior, mais rápido cai);</li>
+                    <li><strong>cumprimentoGotas</strong>: comprimento da linha que representa a gota.</li>
+                </ul>
+                <p>Depois disso, criamos a função <code>desenharChuva()</code> que desenha as gotas como linhas com <code>line()</code>, usando <code>stroke</code> azul para representar a cor da água.</p>
+                <p>A cada frame, a posição vertical da gota aumenta de acordo com sua velocidade. Se ela sair da tela, é reiniciada no topo, criando o efeito contínuo de chuva.</p>
+                <p>Por fim, a função <code>desenharChuva()</code> é chamada dentro do <code>draw()</code>, junto com a lua, as estrelas e o avião.</p>
+                <h4>Código utilizado:</h4>
+            </div>
+            <div>
+                <h5>1. Declaração de variáveis no início do código</h5>
+                <img src="images/letGotas.jpg" alt="Declaração da variável gotas">
+                <h5>2. Geração das gotas dentro da função setup()</h5>
+                <img src="images/criarGotas.jpg" alt="Laço for criando gotas">
+                <h5>3. Função para desenhar a chuva</h5>
+                <img src="images/functionDesenharChuva.jpg" alt="Função desenharChuva">
+            </div>
+        </section>
+
+        <section>
+            <div>
+                <h3>Quarto passo: adicionar o avião</h3>
+                <p>O avião foi incluído como um detalhe especial no cenário, dando um toque de movimento e realismo, como se estivesse sobrevoando a noite chuvosa.</p>
+                <p>Primeiro, carregamos a imagem do avião usando a função <code>preload()</code>, com a linha:</p>
+                <code>aviao = loadImage("images/Avião.png")</code>
+                <p>Depois disso, criamos duas variáveis para controlar a posição do avião na tela:</p>
+                <ul>
+                    <li><strong>aviaoX</strong>: posição horizontal, iniciando fora da tela à direita;</li>
+                    <li><strong>aviaoY</strong>: posição vertical, começando na parte inferior.</li>
+                </ul>
+                <p>No <code>setup()</code>, o som do avião também é carregado com <code>loadSound()</code> e tem seu volume definido com <code>setVolume()</code>.</p>
+                <p>Na função <code>draw()</code>, usamos <code>image()</code> para desenhar o avião na posição atual, e depois alteramos suas coordenadas para fazê-lo subir e ir para a esquerda, como se estivesse voando na diagonal.</p>
+                <h4>Código utilizado:</h4>
+            </div>
+            <div>
+                <h5>1. Declaração de variáveis no início do código</h5>
+                <img src="images/letAviao.jpg" alt="Variáveis do avião (X e Y)">
+                <h5>2. Desenho e movimento do avião no draw()</h5>
+                <img src="images/desenharAviao.jpg" alt="Avião sendo desenhado e movido">
+            </div>
+        </section>
+
+        <section>
+            <div>
+                <h3>Passo mais importante: criar o raio</h3>
+                <p>O raio foi adicionado para representar uma tempestade intensa no cenário. O objetivo era criar um efeito visual marcante, que simula os relâmpagos que ocorrem durante uma noite chuvosa.</p>
+                <p>Para isso, criamos um array chamado <code>raio</code>, que armazena os pontos (coordenadas x e y) do traçado do relâmpago. Além disso, usamos uma variável <code>mostrarRaio</code> para controlar se o raio deve ser desenhado ou não, e <code>tempoDoFlash</code> para controlar o efeito de clarão na tela.</p>
+                <p>O raio é gerado por uma função chamada <code>gerarRaio()</code>. Ela cria uma linha que desce da parte de cima da tela até embaixo, com pequenas variações horizontais aleatórias para simular o aspecto irregular de um relâmpago real. Veja como funciona:</p>
+                <ul>
+                    <li>Começamos com uma posição inicial no topo da tela;</li>
+                    <li>A cada passo, avançamos um pouco para baixo (eixo y) e variamos a posição horizontal (eixo x) para os lados;</li>
+                    <li>Esses pontos são salvos no array <code>raio</code>.</li>
+                </ul>
+                <p>Para desenhar o raio na tela, usamos a função <code>desenharRaio()</code>, que percorre os pontos armazenados e os conecta usando <code>beginShape()</code>, <code>vertex()</code> e <code>endShape()</code>. A cor usada é um tom de azul claro com <code>strokeWeight</code> mais espesso para destacar o raio.</p>
+                <p>Além disso, criamos um efeito de <strong>clarão branco</strong> quando o raio aparece. Isso é feito desenhando um retângulo branco translúcido sobre toda a tela. Esse efeito dura apenas alguns milissegundos e é controlado comparando o tempo atual com <code>tempoDoFlash</code> usando <code>millis()</code>.</p>
+                <p>O raio pode surgir de duas formas:</p>
+                <ul>
+                    <li><strong>Automática:</strong> a cada quadro (frame), há uma pequena chance (por exemplo, 1%) de um novo raio ser gerado aleatoriamente;</li>
+                    <li><strong>Manual:</strong> se o usuário clicar com o mouse (<code>mousePressed()</code>), o raio aparece instantaneamente.</li>
+                </ul>
+                <p>No <code>draw()</code>, verificamos se é para desenhar o raio e se ainda estamos no tempo do flash. Se sim, chamamos <code>desenharRaio()</code> e desenhamos o clarão branco.</p>
+                <h4>Código utilizado:</h4>
+            </div>
+            <div>
+                <h5>1. Declaração das variáveis do raio no início</h5>
+                <img src="images/letRaio.jpg" alt="Variáveis do raio">
+                <h5>2. Função para gerar o raio</h5>
+                <img src="images/functionGerarRaio.jpg" alt="Função gerarRaio">
+                <h5>3. Função para desenhar o raio</h5>
+                <img src="images/functionDesenharRaio.jpg" alt="Função desenharRaio">
+                <h5>4. Controle do flash no draw()</h5>
+                <img src="images/controleFlashDraw.jpg" alt="Controle do clarão branco">
             </div>
         </section>
     </main>
-<footer id="sobre">
-    <p>Feito por: Marcelo Paulino e Davi Lucas — 2025 (Para SenacSP - BCC > Projeto Integrador)</p>
-</footer>
+    <footer id="sobre">
+        <p>Feito por: Marcelo Paulino e Davi Lucas — 2025 (Para SenacSP - BCC > Projeto Integrador)</p>
+    </footer>
 </body>
 </html>
