alteração no header

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Projeto</a>
+                            <a class="nav-link active" aria-current="page" href="#projeto">Projeto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Instruções</a>
+                            <a class="nav-link" href="#analise">Instruções</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#sobre">Autores</a>
@@ -52,7 +52,7 @@
             </div>
         </section>
         <section>
-            <div>
+            <div id="analise">
                 <h2>Análise Completa</h2>
                 <h3>Primeiro passo: desenhar a Lua</h3>
                 <p>
